adding research paper hyperlink

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<p> Hello, welcome to our website for Explainable Statute Prediction from Legal Documents: Observations and Challenges. Here, we host our paper, data and blog regarding the work done. </p>
+<p> Hello, welcome to our website for Explainable Statute Prediction from Legal Documents: Observations and Challenges. 
+  Here, we host our <a href="Explainable Statute Prediction from Legal Documents.pdf">paper</a>, data and blog regarding the work done. </p>
