Updated hyperlink text

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <p> Hello, welcome to our website for Explainable Statute Prediction from Legal Documents: Observations and Challenges. 
-  Here, we host our <a href="Explainable Statute Prediction from Legal Documents.pdf">paper</a>, data and blog regarding the work done. </p>
+  Here, we host our paper, blog regarding the work done.</p>
+<p> Please <a href="Explainable Statute Prediction from Legal Documents.pdf">click here</a> to access the most recent draft of our findings summarised as a short paper.</p>
